# index-map

./: CMakeLists.txt  LICENSE.md  README.md
.github/ci/: Dockerfile
.github/workflows/: build-ci-image.yml  ctest-mpi.yml  deploy-pages.yml
cmake/: Fypp.cmake
doc/: README.md  coarray-perf.md  coarry-perf.md  disk-fem-perf.md  disk-fv-perf.md  index_map_type.md  mpi-perf.md  nag-coarray-mem-alloc-perf.md  performance.md  test-configuration.md
doc/sphinx/: CMakeLists.txt  conf.py  index.rst  index_map_type.rst
example/: CMakeLists.txt  README.md  disk-fem-parallel.F90  disk-fem-serial.F90  disk-fv-mpi.f90  disk-fv-parallel.F90  disk-fv-serial.F90  disk-fv-serial.f90  redistribute.F90
src/: CMakeLists.txt  f90_assert.F90  index_map_type-collate_impl.F90  index_map_type-distribute_impl.F90  index_map_type-gather_impl.F90  index_map_type-gather_offp_impl.F90  index_map_type-localize_impl.F90  index_map_type-scatter_impl.F90  index_map_type-scatter_offp_impl.F90  index_map_type.F90  integer_map_type.F90  integer_set_type.F90  parallel_communication-broadcast_impl.F90  parallel_communication-collate_impl.F90  parallel_communication-distribute_impl.F90  parallel_communication-reduce_impl.F90  parallel_communication.F90
src/caf/: CMakeLists.txt  coarray_collectives.F90  coll_1.inc  coll_2.inc  coll_3.inc  dist_1.inc  dist_2.inc  dist_3.inc  f90_assert.F90  f90_assert.fpp  gath-scat-forms.inc  gath_1.inc  gath_1_alt.inc  gath_1a.inc  gath_1a1.inc  gath_1b.inc  gath_1c.inc  gath_1c1.inc  gath_1c2.inc  gath_1c3.inc  gath_1c4.inc  gath_1d.inc  gath_1d1.inc  gath_1d2.inc  gath_1e.inc  gath_1e1.inc  gath_1e2.inc  gath_1f.inc  gath_1f1.inc  gath_2.inc  gath_3.inc  index_map_type-collate_impl.F90  index_map_type-collate_impl.F90.fypp  index_map_type-core_impl.F90  index_map_type-distribute_impl.F90  index_map_type-distribute_impl.F90.fypp  index_map_type-gather_offp_impl.F90  index_map_type-gather_offp_impl.F90.fypp  index_map_type-localize_impl.F90  index_map_type-localize_impl.F90.fypp  (+7 more)
src/mpi/: CMakeLists.txt  index_map_type-collate_impl.F90  index_map_type-collate_impl.F90.fypp  index_map_type-distribute_impl.F90  index_map_type-distribute_impl.F90.fypp  index_map_type-gather_offp_impl.F90  index_map_type-gather_offp_impl.F90.fypp  index_map_type-localize_impl.F90.fypp  index_map_type-scatter_offp_impl.F90  index_map_type-scatter_offp_impl.F90.fypp  index_map_type.F90  index_map_type.F90.fypp
test/: CMakeLists.txt  broadcast_test.F90  collate_test.F90  distribute_test.F90  gather_test.F90  localize_test.F90  reduce_test.F90  scatter_test.F90
